* Appearantly, we are calling ScreenClipping() on some views who's parent   views don't have a valid screen clipping yet. If then later we want   to invalidate the clipping of an entire hierarchie, the traversal stops   before reaching some of the child views, because the assumption was that   for any views with invalid screen clipping, their child views have invalid   screen clipping as well. Though this might cost a little performance, we   always invalidate the screen clipping of all child views, ignoring the   flag of the current view. Fixes ticket #1198 (garbled screen clipping of   E-Mail prefs and WonderBrush tool area when switching tabs).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23688 a95241bf-73f2-0310-859d-f6bbb57e9c96